--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
-  app:
-    container_name: qa_live_test_app
-    image: janisnarbuts/qa_live_test_app:latest
+  app-backend:
+    container_name: qa_live_test_app_backend
+    image: janisnarbuts/qa_live_test_app:latest-backend
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/postgres
       SPRING_DATASOURCE_USERNAME: postgres
@@ -12,6 +12,16 @@ services:
         condition: service_healthy
     ports:
       - "9998:8080"
+
+  app-frontend:
+    container_name: qa_live_test_app_frontend
+    image: janisnarbuts/qa_live_test_app:latest-frontend
+    environment:
+      API_BASE_URL: http://localhost:9998/api/users
+    depends_on:
+      - app-backend
+    ports:
+      - "9997:80"
 
   db:
     container_name: qa_live_test_app_db
@@ -24,6 +34,6 @@ services:
       - "9999:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
+      interval: 1s
+      timeout: 2s
+      retries: 10
