--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,10 @@ dependencies {
 		because("we want to use webflux for rest api testing")
 	}
 
+	implementation("com.microsoft.playwright:playwright:1.57.0") {
+		because("we need playwright for browser tests")
+	}
+
 	annotationProcessor("org.projectlombok:lombok:latest.release") {
 		because "Processes Lombok annotations at compile time."
 	}
